_sass/forms.scss
/* ... */
.controls {
  label {
    padding-top: 2px;
    margin-right: 10px;
    vertical-align: middle;
  }
}

form {
  .form-row {
    margin-bottom: 15px;

    > label:first-of-type {
      display: block;
      margin-bottom: 5px;
    }

    span.error {
      color: $error-color;
      display: block;
    }
  }

  &.full {
    .input,
    .prime-multiple-select,
    .StripeElement,
    input[type="email"],
    input[type="number"],
    input[type="search"],
    input[type="text"],
    input[type="tel"],
    input[type="url"],
    input[type="password"],
    textarea,
    select {
      width: 100%;
    }

    label.select {
      width: 100%;

      select {
        width: 100%;
      }
    }

    .input-addon-group {
      width: 100%;
    }
  }

  .radio-list {
    display: inline-block;

    label.radio {
      display: block;
    }
  }
}

form.labels-left {
  .form-row {
    margin-bottom: 15px;

    @media (min-width: 576px) {
      .prime-multiple-select {
        width: calc(100% - 18% - 22px);
      }

      > label:first-of-type {
        float: left;
        margin-right: 20px;
        margin-top: 8px;
        text-align: right;
        width: 18%;
      }

      > label ~ span.error {
        margin-left: calc(18% + 22px);
      }

      > span.error {
        color: $error-color;
        display: block;
      }

      &:after {
        clear: both;
        content: '';
        display: table;
      }

      .checkbox + label {
        margin-right: 10px;
        margin-top: 9px;
        vertical-align: top;
      }
    }
  }

  @include media(sm) {
    .checkbox {
      margin-top: 6px;
    }

    .radio {
      margin-top: 5px;
    }
  }

  &.full {
    @include media(sm) {
      .form-row > label:first-of-type + * {
        width: calc(100% - 18% - 22px);
      }
    }
  }
}

fieldset {
  border: 0;
  margin: $fieldset-margin;
  min-width: inherit;
  padding: 0;
  width: 100%;

  legend {

    /* Adjacent p remove the top margin and increase the bottom margin */
    + p {
      margin-top: 0;
      margin-bottom: 20px;
    }

    border: none;
    border-bottom: $fieldset-legend-border;
    color: $fieldset-legend-color;
    display: block;
    font-size: $fieldset-legend-font-size;
    font-weight: $fieldset-legend-font-weight;
    margin-bottom: 17px;
    padding-bottom: 5px;
    width: 100%;
  }
}

.input, input {
  position: relative;
}

input::placeholder {
  line-height: $input-placeholder-line-height; // Hack for Firefox and Safari
}

.input,
input[type="email"],
input[type="file"],
input[type="number"],
input[type="search"],
input[type="text"],
input[type="tel"],
input[type="url"],
input[type="password"],
textarea {
  appearance: none;
  background: $input-background-color;
  border: $input-border;
  border-radius: $input-border-radius;
  box-shadow: $input-box-shadow;
  display: inline-block;
  font-size: 16px;
  font-weight: $input-font-weight;
  line-height: $input-line-height;
  padding: $input-padding-y $input-padding-x;
  transition: $input-transition;

  &:disabled {
    background: rgba($input-background-color, 0.2);
    color: $text-disabled-color;
  }

  &:focus {
    box-shadow: $input-box-shadow, $highlight-box-shadow;
    outline: 0;
  }

  &.flat {
    background: $input-flat-background;
    border: none;
    box-shadow: none;

    &.bordered {
      border: 1px solid $input-flat-border-color;
      border-radius: $input-border-radius;
    }
  }

  &.monospace {
    font-family: $monospace-font-stack;
  }
}

input[type=range] {
  -webkit-appearance: none;
  -webkit-transition: .2s;
  appearance: none;
  background: $gray-2;
  border-radius: 5px;
  opacity: 0.7;
  outline: none;
  height: 4px;
  transition: opacity .2s;
  width: 100%;

  &:hover {
    opacity: 1;
  }

  &::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    background: $purple-medium;
    border-radius: 50%;
    cursor: pointer;
    height: 18px;
    width: 18px;
  }

  &::-moz-range-thumb {
    background: $purple-medium;
    border-radius: 50%;
    cursor: pointer;
    height: 18px;
    width: 18px;
  }

  &.blue {
    &::-webkit-slider-thumb {
      background: $blue-medium;
    }

    &::-moz-range-thumb {
      background: $blue-medium;
    }
  }

  &.green {
    &::-webkit-slider-thumb {
      background: $green-medium;
    }

    &::-moz-range-thumb {
      background: $green-medium;
    }
  }

  &.orange {
    &::-webkit-slider-thumb {
      background: $orange-medium;
    }

    &::-moz-range-thumb {
      background: $orange-medium;
    }
  }
}

// This styles the outer div or span and then removes all the styles from the input itself
.input input {
  background: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  margin: 0;
  padding: 0;
}

@include media(sm) {
  .input,
  .StripeElement,
  input[type="email"],
  input[type="file"],
  input[type="number"],
  input[type="search"],
  input[type="text"],
  input[type="tel"],
  input[type="url"],
  input[type="password"],
  textarea {
    font-size: $input-font-size-desktop;
  }
}

/* Set a default max width so that it does not overflow */
textarea {
  max-width: calc(100%);
}
/* ... */

